--- a/styles/main.css
+++ b/styles/main.css
@@ -22,6 +22,10 @@ header {
     gap: 10px;
 }
 
+/* .ul-navigator {
+    visibility: hidden;
+} */
+
 .container .navigation-header ul {
     height: 40px;
 }
@@ -52,14 +56,16 @@ header {
 /* right block */
 
 .search {
-    padding: 5px 10px;
-    border-radius: 5px;
-    background: rgba(255, 255, 255, 0.1);
     display: flex;
     gap: 10px;
     align-items: center;
 }
 
+.search-form {
+    background: rgba(255, 255, 255, 0.1);
+    padding: 5px 10px;
+    border-radius: 5px;
+}
 
 .sign-up {
     background-color: #573d82;
@@ -117,7 +123,6 @@ header {
 }
 
 
-
 .search input:focus::placeholder {
     color: rgb(0, 0, 0);
     width: 145px !important;
@@ -158,16 +163,13 @@ header {
 
 /* --------- main setting --------- */
 .main-container-cards {
-    padding-top: 45px;
+    padding: 70px;
     display: block;
 }
 
 .wrapper {
     max-width: 95%;
-    margin-left: auto;
-    margin-right: auto;
-    padding-left: 20px;
-    padding-right: 20px;
+    
 }
 
 .category-label {
@@ -176,14 +178,28 @@ header {
     width: 100%;
     padding-bottom: 10px;
     margin-bottom: 30px;
-    margin-left: 30px
+    margin-left: 30px;
     
 }
 
 .category-label h5 {
     display: inline-block;
-    font-size: 16px;
+    font-size: 17px;
     margin-right: 5px;
     margin-bottom: 0;
+    font-weight: 400;
 }
+
+.search-input::before {
+   background-color: tomato;
+   opacity: 0;
+   z-index: -1;
+   transition: opacity .3s; 
+}
+
+.search-input:focus:before {
+    opacity: 1;
+}
+
+
 /* --------- foother setting --------- */
