--- a/styles/main.css
+++ b/styles/main.css
@@ -174,12 +174,13 @@ header {
 }
 
 .category-label {
-  display: inline-block;
+  display: inline-flex;
   border-bottom: solid 1px #d8dde6;
   width: 100%;
   padding-bottom: 10px;
   margin-bottom: 30px;
   margin-left: 30px;
+  justify-content: space-between;
 }
 
 .category-label p {
@@ -204,6 +205,58 @@ header {
 
 .search-input:focus:before {
   opacity: 1;
+}
+
+.col-one {
+  display: inline-block;
+}
+
+.col-one {
+  display: inline-block;
+}
+
+.label-main {
+  color: #9b9fa2;
+  font-size: 13px;
+  font-weight: 400;
+  margin-right: 10px;
+  line-height: 34px;
+}
+
+.col-two {
+  display: flex;
+}
+
+.custom-select {
+  border: 1px solid #ccc;
+  display: inline-block;
+  position: relative;
+}
+
+.selected-item {
+  padding: 9px 50px;
+  margin-right: 130px;
+  max-width: 400px;
+  padding-left: 10px;
+}
+
+.option {
+  padding: 8px;
+}
+
+.selected-item {
+}
+
+.options {
+  position: absolute;
+  top: 100%;
+  left: 0;
+  display: none;
+  border: 1px solid #ccc;
+}
+
+.options.show {
+  display: block;
 }
 
 /* --------- foother setting --------- */
